AGP 7.2 + Java >= 9 requires opening some module
Signed-off-by: Paul Merlin <paul@gradle.com>